# jupyter-notebook-webapp-tutorial

./: .gitignore  README.md  app.py  config.json  index.html  index.json  myst.search.json  myst.yml  notebook.py  objects.inv  pyproject.toml  requirements.txt  test_notebook.ipynb
.github/workflows/: deploy.yaml
myfirstbook/: myst.yml
