[project]
name = "jupyter-notebook-webapp-tutorial"
version = "0.1.0"
description = "A testing solution for online jupyter notebooks"
authors = [
    {name = "Ryan Kim",email = "36388915+kimryan0416@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=2.1.4,<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "polars (>=1.39.3,<2.0.0)",
    "altair (>=6.0.0,<7.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "vega-datasets (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false